layout issues fixed up

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 :root {
   --yellow: rgb(225, 229, 30);
+  overflow: hidden;
 }
 .App {
   height: 100vh;
@@ -19,9 +20,12 @@ body {
 }
 
 #ny {
+  border-radius: 5px;
+  margin-top: 5%;
   margin-left: 20px;
   min-width: 320px;
-  width: 769px;
+  width: 90%;
+  max-width: 1000px;
   overflow: hidden;
 }
 .nav {
@@ -163,40 +167,54 @@ body {
 }
 .game-over{
   background-color: rgb(245, 242, 242);
-  padding: 2%;
   height: 20vh;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow:hidden;
 }
 .result-card{
-  width: fit-content;
+  width: 400px;
+  text-overflow: clip;
   background-color: var(--yellow);
-  margin-bottom: 20px;
-  padding: 10px;
+  padding: 2px;
   border-radius: 5px;
 }
 .card{
+  max-width: 400px;
+  max-height: 100px;
   border-radius: 5px;
   padding: 10px;
-  height: fit-content;
-  width: fit-content;
   background-color: rgb(201, 197, 197);
 }
 .overlay{
   overflow: hidden;
-  display: inline-block;
   height: 100vh;
   width: 100vw;
-  position: relative;
+  position:absolute;
+  background-color: rgba(51, 46, 46, 0.7);
+  z-index: 2;
+  mask-image: radial-gradient(circle closest-side at 50% 55vh, transparent 45%, white 50%);
+  /* mask-image: radial-gradient(red,green, blue); */
+}
+.marker{
+  background-color: rgb(81,239,13);
+  color: blue;
+  font-family: poppins;
+  margin-bottom: 100px;
+  padding: 2px;
+  border-radius: 5px;
+}
+.modal-background{
+  position: fixed;
+  height: 100vh;
+  width: 100vw;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgba(51, 46, 46, 0.7);
+  background-color: rgba(0,0,0, .7);
   z-index: 100;
-  mask-image: radial-gradient(circle farthest-side at 50vw 60vh, transparent 45%, white 50%);
 }
 @keyframes wiggle {
   0% {transform: translate(1px, 1px) rotate(0deg);}
@@ -215,6 +233,16 @@ body {
 
 
 @media screen and (max-width: 769px) {
+  .overlay{
+    overflow: hidden;
+    height: 100vh;
+    width: 100vw;
+    position:absolute;
+    background-color: rgba(51, 46, 46, 0.7);
+    z-index: 2;
+    mask-image: radial-gradient(circle farthes-side at 50% 55vh, transparent 45%, white 50%);
+    /* mask-image: radial-gradient(red,green, blue); */
+  }
   #ny {
     margin: 0;
     width: 100vw;
